Alignement fixed, favicon added, country code option added to contact form

--- a/styles.css
+++ b/styles.css
@@ -174,6 +174,7 @@
 .section h2 {
   text-align: left;
   margin-bottom: 30px;
+  margin-left: 20px;
   color: #00a651;
   font-size: 32px;
 }
@@ -258,6 +259,7 @@
 
 .stat-text {
   font-weight: bold;
+  font-size: 18px;
   color: #555;
 }
 
@@ -666,7 +668,9 @@ html {
   flex: 1.5; 
   min-width: 300px;
 }
-
+.about-text p{
+  margin-left: 20px;
+}
 #contact .form-box {
   background: #ffffff;
   padding: 30px;
